duniverse/menhirLib.20200211/test/static/bad/occurs-check.mly
%%
a(A): A(a) {}
b: a(a) {}
%%
